--- a/Pandas/Best-Pandas-Apply.ipynb
+++ b/Pandas/Best-Pandas-Apply.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4108012e",
    "metadata": {
     "ExecuteTime": {
@@ -53,131 +53,10 @@
     },
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandarallel in /Users/avi/anaconda3/lib/python3.9/site-packages (1.6.3)\n",
-      "Requirement already satisfied: psutil in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandarallel) (5.8.0)\n",
-      "Requirement already satisfied: dill>=0.3.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandarallel) (0.3.6)\n",
-      "Requirement already satisfied: pandas>=1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandarallel) (1.4.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas>=1->pandarallel) (2.8.2)\n",
-      "Requirement already satisfied: numpy>=1.18.5 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas>=1->pandarallel) (1.21.5)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas>=1->pandarallel) (2021.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/avi/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas>=1->pandarallel) (1.16.0)\n",
-      "Requirement already satisfied: mapply in /Users/avi/anaconda3/lib/python3.9/site-packages (0.1.17)\n",
-      "Requirement already satisfied: pathos>=0.2.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from mapply) (0.3.0)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /Users/avi/anaconda3/lib/python3.9/site-packages (from mapply) (4.64.0)\n",
-      "Requirement already satisfied: psutil in /Users/avi/anaconda3/lib/python3.9/site-packages (from mapply) (5.8.0)\n",
-      "Requirement already satisfied: pox>=0.3.2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pathos>=0.2.0->mapply) (0.3.2)\n",
-      "Requirement already satisfied: ppft>=1.7.6.6 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pathos>=0.2.0->mapply) (1.7.6.6)\n",
-      "Requirement already satisfied: multiprocess>=0.70.14 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pathos>=0.2.0->mapply) (0.70.14)\n",
-      "Requirement already satisfied: dill>=0.3.6 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pathos>=0.2.0->mapply) (0.3.6)\n",
-      "Collecting pandas-parallel\n",
-      "  Downloading pandas-parallel-0.1.7.tar.gz (3.6 kB)\n",
-      "Requirement already satisfied: pandas in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas-parallel) (1.4.4)\n",
-      "Requirement already satisfied: numpy in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas-parallel) (1.21.5)\n",
-      "Requirement already satisfied: tqdm in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas-parallel) (4.64.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas->pandas-parallel) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas->pandas-parallel) (2021.3)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/avi/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas->pandas-parallel) (1.16.0)\n",
-      "Building wheels for collected packages: pandas-parallel\n",
-      "  Building wheel for pandas-parallel (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for pandas-parallel: filename=pandas_parallel-0.1.7-py3-none-any.whl size=5210 sha256=f345d9b536a942199cee8b4c0fba0690eebe07532c3b75ebacff190ceaf1fb53\n",
-      "  Stored in directory: /Users/avi/Library/Caches/pip/wheels/52/5a/6f/1e9df17fb398cb15349aadc61ae90e587fd93ff8c7214938b6\n",
-      "Successfully built pandas-parallel\n",
-      "Installing collected packages: pandas-parallel\n",
-      "Successfully installed pandas-parallel-0.1.7\n",
-      "Requirement already satisfied: swifter in /Users/avi/anaconda3/lib/python3.9/site-packages (1.3.4)\n",
-      "Requirement already satisfied: pandas>=1.0.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (1.4.4)\n",
-      "Requirement already satisfied: ipywidgets>=7.0.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (7.6.5)\n",
-      "Requirement already satisfied: dask[dataframe]>=2.10.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (2022.2.1)\n",
-      "Requirement already satisfied: bleach>=3.1.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (4.1.0)\n",
-      "Requirement already satisfied: psutil>=5.6.6 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (5.8.0)\n",
-      "Requirement already satisfied: cloudpickle>=0.2.2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (2.0.0)\n",
-      "Requirement already satisfied: tqdm>=4.33.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (4.64.0)\n",
-      "Requirement already satisfied: parso>0.4.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from swifter) (0.8.3)\n",
-      "Requirement already satisfied: webencodings in /Users/avi/anaconda3/lib/python3.9/site-packages (from bleach>=3.1.1->swifter) (0.5.1)\n",
-      "Requirement already satisfied: six>=1.9.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from bleach>=3.1.1->swifter) (1.16.0)\n",
-      "Requirement already satisfied: packaging in /Users/avi/anaconda3/lib/python3.9/site-packages (from bleach>=3.1.1->swifter) (21.3)\n",
-      "Requirement already satisfied: toolz>=0.8.2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from dask[dataframe]>=2.10.0->swifter) (0.11.2)\n",
-      "Requirement already satisfied: pyyaml>=5.3.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from dask[dataframe]>=2.10.0->swifter) (5.4.1)\n",
-      "Requirement already satisfied: fsspec>=0.6.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from dask[dataframe]>=2.10.0->swifter) (2022.2.0)\n",
-      "Requirement already satisfied: partd>=0.3.10 in /Users/avi/anaconda3/lib/python3.9/site-packages (from dask[dataframe]>=2.10.0->swifter) (1.2.0)\n",
-      "Requirement already satisfied: numpy>=1.18 in /Users/avi/anaconda3/lib/python3.9/site-packages (from dask[dataframe]>=2.10.0->swifter) (1.21.5)\n",
-      "Requirement already satisfied: ipython-genutils~=0.2.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (0.2.0)\n",
-      "Requirement already satisfied: nbformat>=4.2.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (5.3.0)\n",
-      "Requirement already satisfied: widgetsnbextension~=3.5.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (3.5.2)\n",
-      "Requirement already satisfied: ipykernel>=4.5.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (6.9.1)\n",
-      "Requirement already satisfied: ipython>=4.0.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (8.2.0)\n",
-      "Requirement already satisfied: jupyterlab-widgets>=1.0.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (1.0.0)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipywidgets>=7.0.0->swifter) (5.1.1)\n",
-      "Requirement already satisfied: appnope in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (0.1.2)\n",
-      "Requirement already satisfied: nest-asyncio in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (1.5.5)\n",
-      "Requirement already satisfied: debugpy<2.0,>=1.0.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (1.5.1)\n",
-      "Requirement already satisfied: tornado<7.0,>=4.2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (6.1)\n",
-      "Requirement already satisfied: jupyter-client<8.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (6.1.12)\n",
-      "Requirement already satisfied: matplotlib-inline<0.2.0,>=0.1.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (0.1.2)\n",
-      "Requirement already satisfied: prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (3.0.20)\n",
-      "Requirement already satisfied: jedi>=0.16 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.18.1)\n",
-      "Requirement already satisfied: pygments>=2.4.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (2.11.2)\n",
-      "Requirement already satisfied: stack-data in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.2.0)\n",
-      "Requirement already satisfied: pickleshare in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.7.5)\n",
-      "Requirement already satisfied: backcall in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.2.0)\n",
-      "Requirement already satisfied: decorator in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (5.1.1)\n",
-      "Requirement already satisfied: setuptools>=18.5 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (61.2.0)\n",
-      "Requirement already satisfied: pexpect>4.3 in /Users/avi/anaconda3/lib/python3.9/site-packages (from ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (4.8.0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from jupyter-client<8.0->ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (2.8.2)\n",
-      "Requirement already satisfied: pyzmq>=13 in /Users/avi/anaconda3/lib/python3.9/site-packages (from jupyter-client<8.0->ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (22.3.0)\n",
-      "Requirement already satisfied: jupyter-core>=4.6.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from jupyter-client<8.0->ipykernel>=4.5.1->ipywidgets>=7.0.0->swifter) (4.9.2)\n",
-      "Requirement already satisfied: jsonschema>=2.6 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbformat>=4.2.0->ipywidgets>=7.0.0->swifter) (3.2.0)\n",
-      "Requirement already satisfied: fastjsonschema in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbformat>=4.2.0->ipywidgets>=7.0.0->swifter) (2.15.1)\n",
-      "Requirement already satisfied: pyrsistent>=0.14.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from jsonschema>=2.6->nbformat>=4.2.0->ipywidgets>=7.0.0->swifter) (0.18.0)\n",
-      "Requirement already satisfied: attrs>=17.4.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from jsonschema>=2.6->nbformat>=4.2.0->ipywidgets>=7.0.0->swifter) (21.4.0)\n",
-      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from packaging->bleach>=3.1.1->swifter) (3.0.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pandas>=1.0.0->swifter) (2021.3)\n",
-      "Requirement already satisfied: locket in /Users/avi/anaconda3/lib/python3.9/site-packages (from partd>=0.3.10->dask[dataframe]>=2.10.0->swifter) (0.2.1)\n",
-      "Requirement already satisfied: ptyprocess>=0.5 in /Users/avi/anaconda3/lib/python3.9/site-packages (from pexpect>4.3->ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.7.0)\n",
-      "Requirement already satisfied: wcwidth in /Users/avi/anaconda3/lib/python3.9/site-packages (from prompt-toolkit!=3.0.0,!=3.0.1,<3.1.0,>=2.0.0->ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.2.5)\n",
-      "Requirement already satisfied: notebook>=4.4.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (6.4.8)\n",
-      "Requirement already satisfied: Send2Trash>=1.8.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (1.8.0)\n",
-      "Requirement already satisfied: prometheus-client in /Users/avi/anaconda3/lib/python3.9/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (0.13.1)\n",
-      "Requirement already satisfied: argon2-cffi in /Users/avi/anaconda3/lib/python3.9/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (21.3.0)\n",
-      "Requirement already satisfied: terminado>=0.8.3 in /Users/avi/anaconda3/lib/python3.9/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (0.13.1)\n",
-      "Requirement already satisfied: nbconvert in /Users/avi/anaconda3/lib/python3.9/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (7.2.3)\n",
-      "Requirement already satisfied: jinja2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (3.0.0)\n",
-      "Requirement already satisfied: argon2-cffi-bindings in /Users/avi/anaconda3/lib/python3.9/site-packages (from argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (21.2.0)\n",
-      "Requirement already satisfied: cffi>=1.0.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from argon2-cffi-bindings->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (1.15.0)\n",
-      "Requirement already satisfied: pycparser in /Users/avi/anaconda3/lib/python3.9/site-packages (from cffi>=1.0.1->argon2-cffi-bindings->argon2-cffi->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (2.21)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0.0rc2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from jinja2->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (2.1.1)\n",
-      "Requirement already satisfied: jupyterlab-pygments in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (0.1.2)\n",
-      "Requirement already satisfied: defusedxml in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (0.7.1)\n",
-      "Requirement already satisfied: importlib-metadata>=3.6 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (4.11.3)\n",
-      "Requirement already satisfied: beautifulsoup4 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (4.11.1)\n",
-      "Requirement already satisfied: nbclient>=0.5.0 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (0.5.13)\n",
-      "Requirement already satisfied: pandocfilters>=1.4.1 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (1.5.0)\n",
-      "Requirement already satisfied: mistune<3,>=2.0.3 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (2.0.4)\n",
-      "Requirement already satisfied: tinycss2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (1.2.1)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/avi/anaconda3/lib/python3.9/site-packages (from importlib-metadata>=3.6->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (3.7.0)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /Users/avi/anaconda3/lib/python3.9/site-packages (from beautifulsoup4->nbconvert->notebook>=4.4.1->widgetsnbextension~=3.5.0->ipywidgets>=7.0.0->swifter) (2.3.1)\n",
-      "Requirement already satisfied: executing in /Users/avi/anaconda3/lib/python3.9/site-packages (from stack-data->ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.8.3)\n",
-      "Requirement already satisfied: asttokens in /Users/avi/anaconda3/lib/python3.9/site-packages (from stack-data->ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (2.0.5)\n",
-      "Requirement already satisfied: pure-eval in /Users/avi/anaconda3/lib/python3.9/site-packages (from stack-data->ipython>=4.0.0->ipywidgets>=7.0.0->swifter) (0.2.2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install pandarallel\n",
-    "!pip install mapply\n",
-    "!pip install pandas-parallel\n",
-    "!pip install swifter"
+    "%%timeit\n",
+    "![ ! -f \"pip_installed\" ] && pip install -q --upgrade pandarallel mapply parallel-pandas swifter && touch pip_installed"
    ]
   },
   {
